# froth_analyser

./: CLAUDE.md  README.md  main.py  pyproject.toml  simple_test_gui.py
logs/: session_20260417_114437_IMPORTANT.jsonl  session_20260417_114437_raw.jsonl  session_20260417_115425_IMPORTANT.jsonl  session_20260417_115425_raw.jsonl  session_20260417_115741_IMPORTANT.jsonl  session_20260417_115741_raw.jsonl  session_20260417_115920_IMPORTANT.jsonl  session_20260417_115920_raw.jsonl  session_20260417_120509_IMPORTANT.jsonl  session_20260417_120509_raw.jsonl  session_20260417_120820_IMPORTANT.jsonl  session_20260417_120820_raw.jsonl
src/froth_app/core/: algorithm_state.py  calibration.py  data_hub.py  log_book.py  roi_manager.py  video_source.py
src/froth_app/engine/: analyzer.py  frame_buffer.py
src/froth_app/engine/algorithms/: __init__.py  base.py  lbp.py  lucas_kanade.py  pca_handler.py
src/froth_app/ui/: calibration_button.py  functions_dialog.py  log_book_interface.py  macro_feature_widget.py  main_window.py  motion_overlay.py  overflow_calibration_widget.py  plot_widgets.py  roi_detail_window.py  roi_overlay.py  style.qss
tests/: test.avi  test_lucaskanade.py
