[project]
name = "froth-analysis-app"
version = "0.1.0"
description = "A modular Python-based application for real-time monitoring and metallurgical analysis of flotation froth via live camera feeds or recorded video."
authors = [
    {name = "Yiyang Guan",email = "eeeyoung2001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.15"
dependencies = [
    "pyside6 (>=6.11.0,<7.0.0)",
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "pyqtgraph (>=0.14.0,<0.15.0)",
    "scikit-image (>=0.26.0,<0.27.0)",
    "scikit-learn (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
